--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <img src="img/cerx.png" alt="Logo" style="height: 150px; width: 150px;">
         <div class="container">
-            <a href="#" class="navbar-brand" > Cerxperts</a>
+            <a href="#" class="navbar-brand" ></a>
 
             <button
             class="navbar-toggler" 
