--- a/index.html
+++ b/index.html
@@ -552,6 +552,10 @@ Darryl just joined us 3 years ago straight out of automative trade school, his p
                             <span class="fw-bold">Email:</span>
                             contactus@Cerxperts.ca
                           </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Our Hours:</span>
+                            Monday-Friday: 7AM - 8PM
+                          </li>
                     </ul>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block" src="img/SS.png" alt="">
