--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     rel="stylesheet"
     href="style.css"
   />
-  
+  <script src="code.js"></script>
+    <title>Cerxperts</title>
 </head>
 <body>
 
@@ -26,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <img src="img/cerx.png" alt="Logo" style="height: 150px; width: 150px;">
         <div class="container">
-            <a href="#" class="navbar-brand" ></a>
+            <a href="#" class="navbar-brand" > Cerxperts</a>
 
             <button
             class="navbar-toggler" 
@@ -552,10 +553,18 @@ Darryl just joined us 3 years ago straight out of automative trade school, his p
                             <span class="fw-bold">Email:</span>
                             contactus@Cerxperts.ca
                           </li>
-                        <li class="list-group-item">
+                          <li class="list-group-item">
                             <span class="fw-bold">Our Hours:</span>
-                            Monday-Friday: 7AM - 8PM
                           </li>
+                          <li class="list-group-item">
+                              Monday-Friday: 7AM-8PM
+                          </li>
+                          <li class="list-group-item">
+                            Saturday: 7AM-5PM
+                        </li>
+                        <li class="list-group-item">
+                            Sunday: CLOSED
+                        </li>
                     </ul>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block" src="img/SS.png" alt="">
